# macho-hook-patcher

./: Cargo.toml  LICENSE  README.md
src/: bundle.rs  main.rs  sign.rs
