[package]
name = "mac_hook_patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apple-codesign = "0.27"
apple-bundles = "0.19"
clap = { version = "4.5", features = ["derive"] }
object = "0.32"
tempdir = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
